[LAYOUT] Fix a bunch of styles (fonts, alignments, thumbnails...), fix contact icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-@import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 /*
 	Lens by HTML5 UP
@@ -932,9 +932,23 @@ input, select, textarea {
 		padding: 3em 2.25em 1.75em 2.25em ;
 	}
 
+		#header h1, 
+		#header h2 {
+			font-size: 2.15em;
+			font-weight: 400;
+			font-family: 'Playfair Display', serif;
+		}
+
 		#header h1 {
-			font-size: 2.25em;
-			font-weight: 700;
+			margin-bottom: 0;
+		}
+
+		#header h2 {
+			font-size: 1.8em;
+		}
+
+		#header p {
+			font-size: 0.8em;
 		}
 
 /* Footer */
@@ -950,7 +964,7 @@ input, select, textarea {
 
 			#footer .copyright li {
 				display: inline-block;
-				font-size: 0.8em;
+				font-size: 0.6em;
 				margin-left: 0.35em;
 				padding: 0;
 			}
@@ -976,8 +990,9 @@ input, select, textarea {
 		#thumbnails article {
 			position: relative;
 			width: 50%;
-			background: #101010;
+			/* background: #101010; */
 			outline: 0;
+			padding: 1px 0 0 1px;
 		}
 
 			#thumbnails article .thumbnail {
@@ -986,6 +1001,9 @@ input, select, textarea {
 				position: relative;
 				border: 0;
 				outline: 0;
+				width: 100%;
+				padding-bottom: 66.6666%;
+				background-size: cover;
 			}
 
 				#thumbnails article .thumbnail img {
@@ -1221,7 +1239,8 @@ input, select, textarea {
 				width: 100%;
 				height: 100%;
 				background-repeat: no-repeat;
-				background-size: cover;
+				background-size: contain;
+				background-position: center;
 				opacity: 0;
 			}
 
